--- a/src/lawchecker/ui/addedNames.ui
+++ b/src/lawchecker/ui/addedNames.ui
@@ -18,7 +18,7 @@
     <item>
      <widget class="QTabWidget" name="tabWidget">
       <property name="currentIndex">
-       <number>2</number>
+       <number>0</number>
       </property>
       <widget class="QWidget" name="AddedNamesTab">
        <attribute name="title">
@@ -403,7 +403,7 @@
           <item row="0" column="0" colspan="2">
            <widget class="QLabel" name="instruction_label_3">
             <property name="text">
-             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;You can create a report comparing different versions of a bill (e.g. the 2nd reading and as amended in committee). This report will show you: Added and removed clauses or schedule paragraphs, and standing clauses and schedule paragraphs with changes.&lt;/p&gt;&lt;p&gt;Below the old XML file is the XML downloaded from LawMaker for the older version of this bill. The new XML file is the XML downloaded from Lawmaker for the newer version of this bill.&lt;/p&gt;&lt;p&gt;Tick VS Code compare to create a comparison of the bills using the diff feature of &lt;a href=&quot;https://code.visualstudio.com/&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#094fd1;&quot;&gt;VS Code&lt;/span&gt;&lt;/a&gt;. Note you must have VS Code installed to use this feature.&lt;/p&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+             <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;You can create a report comparing different versions of a bill (e.g. the 2nd reading and as amended in committee). This report will show you: Added and removed clauses or schedule paragraphs, and standing clauses and schedule paragraphs with changes.&lt;/p&gt;&lt;p&gt;Below the old XML file is the XML downloaded from LawMaker for the older version of this bill. The new XML file is the XML downloaded from Lawmaker for the newer version of this bill.&lt;/p&gt;&lt;p&gt;You can also use VS Code to create a comparison of the bills using the diff feature of &lt;a href=&quot;https://code.visualstudio.com/&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#094fd1;&quot;&gt;VS Code&lt;/span&gt;&lt;/a&gt;. Note you must have VS Code installed to use this feature.&lt;/p&gt;&lt;p&gt;&lt;br/&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
             </property>
             <property name="wordWrap">
              <bool>true</bool>
