--- a/src/lawchecker/ui/addedNames.ui
+++ b/src/lawchecker/ui/addedNames.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>644</width>
-    <height>750</height>
+    <height>1100</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -575,6 +575,22 @@ Use the button below to select a folder which contains Bill XML files. </string>
         </item>
        </layout>
       </widget>
+     </widget>
+    </item>
+    <item>
+     <widget class="QLabel" name="label_11">
+      <property name="text">
+       <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;Please report any bugs or any ideas for improvement to Mark Fawcett.&lt;br/&gt;Code avaliable on &lt;a href=&quot;https://github.com/hoc-ppu/lawchecker&quot;&gt;&lt;span style=&quot; text-decoration: underline; color:#094fd1;&quot;&gt;GitHub&lt;/span&gt;&lt;/a&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+      <property name="textFormat">
+       <enum>Qt::TextFormat::RichText</enum>
+      </property>
+      <property name="wordWrap">
+       <bool>true</bool>
+      </property>
+      <property name="openExternalLinks">
+       <bool>true</bool>
+      </property>
      </widget>
     </item>
    </layout>
