--- a/src/css/style.css
+++ b/src/css/style.css
@@ -179,12 +179,12 @@
   }
   .main-content-inner{
     /* changed where the padding is applied, see react-slide-over */
-    padding: 0px 24px 24px 24px;
+    padding: 0px 24px 18px 24px;
     background-color: #F9FAFB;
     flex-grow: 1;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: space-between;
   }
   /* .main-content-inner-inner{ } */
 
@@ -209,6 +209,7 @@
   }
   .version{
     padding-left: 24px;
+    padding-bottom: 0.4rem;
   }
   .card-header h2, .card-header p{
     margin-top: 0.25rem;
@@ -284,15 +285,3 @@
   filter: blur(0px); /* Remove the blur */
 }
 
-.bottom-bar {
-  display: flex;
-  justify-content: space-between;
-  align-items: center; /* Ensure items are centered vertically */
-  padding: 1rem;
-  padding-top: 0.8rem;
-  position: fixed;
-  bottom: 0;
-  width: calc(100% - 250px); /* Ensure the container spans the full width */
-  border-top: 1px solid var(--core-gray-300, #D1D5DB);
-  background-color: #EEECEB; /* Optional: Set a background color */
-}
