--- a/src/css/style.css
+++ b/src/css/style.css
@@ -285,3 +285,17 @@
   filter: blur(0px); /* Remove the blur */
 }
 
+.progress_error {
+  color: #DE2E32;
+}
+
+.sr-only {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  border: 0;
+}
