Improve function to create data for SharePoint
Now a HTML page is created to facilitate uploading a summary to Sharepoint instead of a CSV file. Improve the ability to save the JSON when downloading amendments from the Bills API.

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -3,6 +3,7 @@
     --brand-purple: #403C6D;
     --brand-purple-shade: #302d52;
     --brand-purple-tint: #534f82;
+    --bs-primary-bg-subtle: #D9FFF0;
   }
   body {
     margin: 0;
@@ -307,4 +308,18 @@
   overflow: hidden;
   clip: rect(0, 0, 0, 0);
   border: 0;
+}
+
+.accordion-button:not(.collapsed){
+  color: black;
+}
+
+.accordion-collapse{
+  transition: max-height .35s ease-in-out;
+  max-height: 0;
+  overflow: hidden;
+}
+
+.accordion-collapse.show{
+  max-height: 100vh;
 }
