--- a/src/lawchecker/templates/compare_report_template.html
+++ b/src/lawchecker/templates/compare_report_template.html
@@ -106,6 +106,9 @@
       word-break: break-word;
       hyphens: auto;
     }
+    .secondary-info h5, .secondary-info .h5 {
+      margin-top: 1rem;
+    }
 
     /* -------------------- added names table -------------------- */
     .an-table {
@@ -113,10 +116,10 @@
       /* table-layout: fixed; */
       /* border-collapse: collapse; */
     }
-    .sticky-head th{
+    .sticky-head th, .diff th{
       /* background: white; */
       position: sticky;
-      top: 0; /* Don't forget this, required for the stickiness */
+      top: -1px; /* Don't forget this, required for the stickiness */
       z-index: 1;
     }
 
